--- a/example/iris-data-classifier/ML-React-App-Template/ui/package.json
+++ b/example/iris-data-classifier/ML-React-App-Template/ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build --repo git@github.com-personal:namvd2709/ML-React-App-Template.git"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -24,10 +27,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage":"https://namvd2709.github.io/ML-React-App-Template",
-  "scripts":{
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  }
-
+  "homepage": "https://namvd2709.github.io/ML-React-App-Template"
 }
